----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-06-18 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/sqlparser.lib.php: bug 1221602, undefined variable when trying
      to use a reserved word as an identifier

2005-06-12 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties.inc.php: visually bind the Add x fields dialog to its 
      submit button
    * db_operations.php: bug #1215688, Copying database does not preserve 
      default charset and collation
    ### 2.6.3-rc1 released

2005-06-12 Olivier Mueller <om@omnis.ch>
    * lang/*, server_privileges.php: added strings for RFE #1197482: 
      $strGeneratePassword, $strGenerate and $strCopy

2005-06-11 Marc Delisle  <lem9@users.sourceforge.net>
    * tbl_properties_export.php: bug #1169791, exporting results from queries
      with limit keyword
    * lang/mongolian* update, thanks to Bayarsaikhan Enkhtaivan 
    * lang/finnish: update, thanks to Jouni Kahkonen
    * lang/norwegian: Update, thanks to Sven-Erik Andersen
    * lang/galician: Updates, thanks to Xosé Calvo.
    * lang/belarusian, libraries/select_lang.lib.php:
      belarusian is now belarusian_cyrillic; added belarusian_latin,
      thanks to Jaska Zedlik

2005-06-08 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1216901, missing backquotes on the Browse
      feature in case of duplicate entry

2005-06-07 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/tatarish*: updates, thanks to Albert Fazlí
    * config.inc.php: bug #1215950, typo in comment

2005-06-06 Marc Delisle  <lem9@users.sourceforge.net>
    * lang/tatarish*, /sync_lang.sh, libraries/select_lang.lib.php,
      translators.html: renamed "tatar" to "tatarish" (tatar is
      a different language and this translation is really tatarish)
    * lang/mongolian*, libraries/select_lang.lib.php,
      translators.html, Documentation.html, README: