@@ -8,6 +8,8 @@ $Source$
 2005-06-18 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/sqlparser.lib.php: bug 1221602, undefined variable when trying
       to use a reserved word as an identifier
+    * db_operations.php, libraries/database_interface.lib.php:
+      bug #1221359, Copying a db containing a MERGE table
 
 2005-06-12 Marc Delisle  <lem9@users.sourceforge.net>
     * tbl_properties.inc.php: visually bind the Add x fields dialog to its 
